apps/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: mywebapp
  labels:
    name: web
    app: mywebapp
spec:
  selector:
    name: web
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
